# lk2nd

./: .drone.sh  .drone.yml  .editorconfig  .gitignore  .gitmodules  AndroidBoot.mk  CMakeLists.txt  LICENSE  Makefile  Makefile.convert-dtsv0  Makefile.dtc  Makefile.ftdump  Makefile.utils  README.md  README.wiki  TODO  checks.c  comment-test.dts  convert-dtsv0-lexer.l  data.c  dtc-lexer.l  dtc-parser.y  dtc.c  dtc.h  fdt.c  fdt.h  fdt_ro.c  fdt_rw.c  fdt_strerror.c  fdt_sw.c  fdt_wip.c  fdtget.c  fdtput.c  flat_dt.h  flattree.c  fstree.c  ftdump.c  libdt.c  libfdt.h  libfdt_env.h  (+14 more)
.assets/: FOSDEM22_lk2nd.jpg.license
.ci/: build.sh  faccessat-simple.c
Documentation/: boot.md  booting-without-of.txt  building.md  devices.md  dt-bindings.md  dts-format.txt  fastboot.md  manual.txt  targets.md
app/: app.c  rules.mk
arch/arm/: CMakeLists.txt  arch.c  asm.S  cache-ops.S  cache.c  compile.mk  crt0.S  dcc.S  faults.c  mmu.c  mmu_lpae.c  ops.S  rules.mk  system-onesegment.ld  system-twosegment.ld  trustzone-system-onesegment.ld  trustzone-test-system-onesegment.ld
arch/arm/include/arch/: arm.h  defines.h
arch/arm/include/arch/arm/: mmu.h  ops.h
doc/: devicetree.md  fastboot.md
dt_source/: 01_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_CDP.dts  02_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_SMB1360_CDP.dts  03_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_MTP.dts  04_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_SMB1360_MTP.dts  05_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_512MB_MTP.dts  06_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_512MB_SMB1360_MTP.dts  07_dtbdump_Qualcomm_Technologies,_Inc._MSM8916_RUMI.dts  08_dtbdump_Qualcomm_Technologies,_Inc._MSM8916_Simulator.dts  09_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_QRD_SKUH.dts  10_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_QRD_SKUI.dts  11_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_QRD_SKUT1.dts  12_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_512MB_QRD_SKUH.dts  13_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_512MB_QRD_SKUI.dts  14_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_QRD_SKUHF.dts  15_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_QRD_SKUIC.dts  16_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_QRD_SKUID.dts  17_dtbdump_Qualcomm_Technologies,_Inc._MSM_8916_512MB_QRD_SKUID.dts  18_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8936_CDP.dts  19_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8936_SMB1360_CDP.dts  20_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8936_SMB1360_MTP.dts  21_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8936_MTP.dts  22_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8936_WCD9306_MTP.dts  23_dtbdump_,Qualcomm_Technologies,_Inc._MSM8939_QRD_SKUK.dts  24_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8939_CDP.dts  25_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8939_CDP_JDI.dts  26_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8939_SMB1360_MTP.dts  27_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8939_MTP.dts  28_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8939_WCD9306_MTP.dts  29_dtbdump_,Qualcomm_Technologies,_Inc._MSM_8939_MTP_JDI.dts  30_dtbdump_,Qualcomm_Technologies,_Inc._MSM8939_RUMI.dts  31_dtbdump_,Qualcomm_Technologies,_Inc._MSM8939_Simulator.dts  32_dtbdump_,Qualcomm_Technologies,_Inc._MSM8939_QRD_SKUK.dts  33_dtbdump_Qualcomm_Technologies,_Inc._APQ_8016_MTP.dts  34_dtbdump_Qualcomm_Technologies,_Inc._APQ_8016_SMB1360_MTP.dts  35_dtbdump_Qualcomm_Technologies,_Inc._MSMTellurium_RUMI.dts  36_dtbdump_Qualcomm_Technologies,_Inc._MSMTellurium_Simulator.dts  (+6 more)
dts/: apq8016-samsung-r02.dts  (+54 more)
(+1921 files in other folders)
